--- a/lambdatest-config.json
+++ b/lambdatest-config.json
@@ -1,7 +1,7 @@
 {
    "lambdatest_auth": {
-      "username": "sachinj.work",
-      "access_key": "1KP2WRjcPB8E5fW71Y54Sucz3f0tzoGf9S6YhhlMY7FR3wwqgN"
+      "username": "",
+      "access_key": ""
    },
    "browsers": [
       {
