--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "test": "cypress open",
     "cy:run": "cypress run",
     "record": "cypress run  --record --key <your_key>",
-    "lambdarun":"lambdatest-cypress run"
+    "lambdarun": "lambdatest-cypress run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^5.6.0",
-    "lambdatest-cypress-cli": "^2.0.4",
+    "cypress": "^8.1.0",
+    "cypress-xpath": "^1.6.2",
+    "lambdatest-cypress-cli": "^2.0.6",
     "typescript": "^4.1.3"
   }
 }
