--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^8.1.0",
+    "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^1.6.2",
     "lambdatest-cypress-cli": "^2.0.6",
     "typescript": "^4.1.3"
